# ai-laptop-tester-pro

./: README.md  battery_stress_test.ps1  hw_check.ps1  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AIEvaluationPanel.tsx  AutoTestController.tsx  BenchmarkImportPanel.tsx  ChecklistPanel.tsx  HardwareFingerprint.tsx  HistoryChartsPanel.tsx  LiveMonitoring.tsx  NetworkSpeedTest.tsx  NotificationPanel.tsx  SettingsPanel.tsx  SystemInfoPanel.tsx  TestComparisonPanel.tsx  TestControls.tsx  TestHistoryPanel.tsx  UserPreferencesPanel.tsx
src/lib/: ai-scoring.ts  benchmark-parser.ts  pdf-export.ts  tauri.ts  test-history.ts  user-preferences.ts
