[package]
name = "ai-laptop-tester-pro"
version = "0.1.0"
description = "AI Laptop Tester Pro - Hardware testing suite with AI-powered scoring"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
chrono = "0.4"
sysinfo = "0.33"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
